fix(fe): prevent overflow shrinking header/footer

--- a/frontend/src/app.module.scss
+++ b/frontend/src/app.module.scss
@@ -8,5 +8,5 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
-    font-family: 'Roboto'
+    font-family: 'Roboto';
 }
