--- a/frontend/src/components/layout/header/header.module.scss
+++ b/frontend/src/components/layout/header/header.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     border-bottom: 1px solid black;
-    height: 3rem;
+    min-height: 3rem;
     justify-content: center;
     align-items: center;
 }
