--- a/frontend/src/pages/post/postpage.module.scss
+++ b/frontend/src/pages/post/postpage.module.scss
@@ -7,4 +7,5 @@
 .pageContent {
     height: 100%;
     padding: 1rem;
+    overflow: auto;
 }
